@@ -165,6 +165,7 @@ class TemplatesBlocks extends Files\CreateFile
                             break;
                         case Constants::FIELD_ELE_SELECTSTATUS:
                         case Constants::FIELD_ELE_RADIOYN:
+                        case Constants::FIELD_ELE_RADIO_ONOFFLINE:
                         case Constants::FIELD_ELE_SELECTUSER:
                         case Constants::FIELD_ELE_DATETIME:
                         case Constants::FIELD_ELE_TEXTDATESELECT:
@@ -195,7 +196,8 @@ class TemplatesBlocks extends Files\CreateFile
         // $td      .= $this->hc->getHtmlTag('td', ['class' => 'center'], "\n" . $anchor . "\t\t\t", false, "\t\t\t");
         $double  = $this->sc->getSmartyDoubleVar($tableSoleName, 'id');
         $lang    = $this->sc->getSmartyConst($language, $stuTableSoleName . '_GOTO');
-        $anchor  = $this->hc->getHtmlAnchor($tableName . ".php?op=show&amp;{$fieldId}=" . $double, $lang, $lang);
+        $single = $this->sc->getSmartySingleVar($moduleDirname . '_url');
+        $anchor  = $this->hc->getHtmlAnchor($single . '/' . $tableName . ".php?op=show&amp;{$fieldId}=" . $double, $lang, $lang);
         $td      .= $this->hc->getHtmlTableData($anchor, 'center', '', "\t\t\t");
         $cycle   = $this->sc->getSmartyNoSimbol('cycle values="odd, even"');
         $tr      = $this->hc->getHtmlTableRow($td, $cycle, "\t\t");
